@@ -1,10 +1,10 @@
-include ChangeLog CHANGES FAQ gourmet.1 gourmet.desktop.in LICENSE MANIFEST.in README.md TODO TESTS setup.cfg setup.py setup_win.py test_tarball.sh
+include ChangeLog CHANGES CODING FAQ build_rpms.py gourmet.1 gourmet.desktop.in LICENSE MANIFEST.in README.md TODO TESTS setup.cfg setup.py setup_win.py test_deb.sh test_tarball.sh
 include bin/gourmet
 recursive-include data *
-recursive-include gourmet *.py *.ui *.mk *.mx2 *.mmf *.kreml *.db *.sh
-recursive-include plugins *.gourmet-plugin.in *.gourmet-plugin
-recursive-include po *.pot *.po *.mo *.py *.sh *.in
+recursive-include gourmet *.py *.ui *.mk *.mx2 *.mmf *.kreml *.db *.sh *.html *.css *.js *.grmt guiprefs
+recursive-include plugins *.gourmet-plugin.in
+recursive-include po POTFILES.in *.pot *.po
 recursive-include tools *.py
 recursive-include ui *.ui
-recursive-include windows *.pyw *.nsi *nsh
+recursive-include windows *.pyw *.nsi *.nsh
 
